# WBM-installer

./: .gitignore  .prettierrc  LICENSE  README.md  package.json  rollup.config.js  svelte.config.js  tailwind.config.cjs  tsconfig.json
.github/workflows/: publish.yml
public/: index.html
src/: App.svelte  constants.ts  global.css  main.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs  util.rs
src-tauri/src/commands/: install.rs  mod.rs  status.rs  update.rs
src-tauri/src/commands/install/: clean.rs  install_bepinex.rs  install_mod.rs  launch_game.rs  launch_options.rs  mod.rs  types.rs
src-tauri/src/commands/remove/: mod.rs  types.rs
src/components/: HomeButton.svelte  Spinner.svelte
src/pages/Home/: ActionButtons.svelte  BottomButtons.svelte  index.svelte
src/pages/Install/: Interrupts.svelte  Steps.svelte  index.svelte  types.ts
src/pages/Operation/: Complete.svelte  Install.svelte  Interrupts.svelte  Remove.svelte  index.svelte  logic.ts  store.ts  types.ts
src/pages/Operation/styles/: anchor.scss  button.scss
src/pages/Status/: index.svelte
src/pages/Update/: index.svelte
