[package]
name = "wbm-installer"
version = "1.0.0"
description = "WBM Installer"
authors = ["developomp"]
license = "MIT"
repository = "https://github.com/War-Brokers-Mods/WBM-installer"
default-run = "wbm-installer"
edition = "2021"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["dialog-open", "shell-open"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# https://tauri.studio/en/docs/usage/guides/bundler/anti-bloat
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
